[package]
name = "autd"
version = "3.0.2"
authors = ["shun suzuki <suzuki@hapis.k.u-tokyo.ac.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
timer = "0.2"
bitflags = "1.1"
num = "0.2"
failure = "0.1"
na = "0.18"
rand = "0.7"
csv = "1.1"
lazy_static = "1.4"
hound = "3.4"
rusoem = { path = "../rusoem"}
# rusoem = { git = "https://github.com/sssssssuzuki/rusoem.git", rev="d29f777"}

[dev-dependencies]
colored = "1.9"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["threadpoollegacyapiset", "errhandlingapi", "handleapi", "winerror"] }
ruads = { git = "https://github.com/sssssssuzuki/ruads.git", optional = true}

[features]
default = []
dbg_link = []
twincat = ["ruads"]