[package]
name = "rusoem"
version = "0.1.4"
authors = ["shun suzuki <suzuki@hapis.k.u-tokyo.ac.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
failure = "0.1.6"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["threadpoollegacyapiset", "errhandlingapi", "handleapi", "winerror"] }

[build-dependencies]
cc = "1.0"
